[gd_scene load_steps=3 format=2]

[ext_resource path="res://Pipe.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 4 )

[node name="PipeEntrance" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="." to="." method="_on_PipeEntrance_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PipeEntrance_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
